on-premise-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: On-Premise Template for Frankfurt Region

Parameters:

  VPCIdentifier:
    Type: String
    Description: VPC Identifier
    Default: on-premise

  LatestAL2023AmiId:
    Description: Latest EC2 Amazon Linux 2023 AMI from Systems Manager Parameter Store
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64'


  VPCNetworkAddress:
    Type: String
    Description: asd
    Default: 10.2.0.0/16

  PrivateSubnetNetworkAddress:
    Type: String
    Description: Network Address for Private Subnet
    Default: 10.2.2.0/24

  PublicSubnetNetworkAddress:
    Type: String
    Description: Network Address for Public Subnet
    Default: 10.2.1.0/24

  


Resources:

############################################################################
# NETWORK LAYER 
############################################################################


##################
# On Premise VPC
# Layer Type: Network Layer 
# Description:
# 
##################

  OnPremiseVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCNetworkAddress
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref VPCIdentifier

##################
# Internet Gateway
# Layer Type: Network Layer 
# Description: 
# 
##################

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: On-Premise-Internet-Gateway

##################
# VPC Gateway Attachment
# Layer Type: Network Layer 
# Description:
# 
##################

  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref OnPremiseVPC
      InternetGatewayId: !Ref InternetGateway


##################
# Private Subnet 1
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
##################

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref OnPremiseVPC
      CidrBlock: !Ref PrivateSubnetNetworkAddress
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: PrivateSubnet


##################
# Public Subnet 1
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
##################

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref OnPremiseVPC
      CidrBlock: !Ref PublicSubnetNetworkAddress
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: PublicSubnet

##################
# Public Route Table
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
##################

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref OnPremiseVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

##################
# Public Route
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
#   - PublicRouteTable
#   - InternetGateway
##################

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

##################
# Public Subnet Route Table Association
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
#   - PublicRouteTable
#   - PublicSubnet
##################

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

##################
# Private Route Table
# Layer Type: Network Layer 
# Description: 
# DependsOn: 
#   - OnPremiseVPC
##################

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref OnPremiseVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

##################
# NAT Gateway
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
#   - PublicSubnet
#   - ElasticIP
##################

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIP.AllocationId
      SubnetId: !Ref PublicSubnet

##################
# Elastic IP
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
##################

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: !Ref OnPremiseVPC

##################
# Private Route
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
#   - NATGateway
#   - PrivateRouteTable
##################

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

##################
# Private Subnet Route Table Association
# Layer Type: Network Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
#   - PrivateRouteTable
#   - PrivateSubnet
##################

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet


############################################################################
# SECURITY LAYER 
############################################################################


##################
# Linux Bastion Host Security Group
# Layer Type: Security Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
##################

  LinuxBastionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Linux-Bastion-SG
      GroupDescription: Enable access to SSH to the Bastion Host
      VpcId: !Ref OnPremiseVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Linux-Bastion-Security-Group


##################
# Application Security Group
# Layer Type: Security Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
##################

  ApplicationServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Application-Server-SG
      GroupDescription: Enable access to HTTP Access to Application Server
      VpcId: !Ref OnPremiseVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Application-Server-Security-Group

##################
# Linux Bastion Host Key Pair
# Layer Type: Security Layer
# Description: Key Pair for Linux Bastion Host and this private key will be placed in System Manager parameter store
##################
  LinuxBastionHostKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: Linux-Bastion-Host-Key-Pair

##################
# Application Server Key Pair
# Layer Type: Security Layer
# Description: Key Pair for Application Server and this private key will be placed in System Manager parameter store
##################
  ApplicationServerKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: Application-Server-Key-Pair


############################################################################
# COMPUTE LAYER 
############################################################################

##################
# Linux Bastion Host
# Layer Type: Compute Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
#   - PublicSubnet
#   - LinuxBastionSecurityGroup
##################

  LinuxBastionHost:
    Type: AWS::EC2::Instance
    InstanceType: t2.micro
    ImageId: !Ref LatestAL2023AmiId
    SubnetId: !!Ref PublicSubnet
    SecurityGroupIds: 
     - !Ref LinuxBastionSecurityGroup
    KeyName: !Ref LinuxBastionHostKeyPair
    Tags:
        - Key: Name
          Value: LinuxBastionHost
    BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 10
            VolumeType: gp3
            DeleteOnTermination: true
            Encrypted: true
        - DeviceName: /dev/xvdb
          NoDevice: {}
    Monitoring: false

##################
# Application Server
# Layer Type: Compute Layer 
# Description:
# DependsOn: 
#   - OnPremiseVPC
#   - PrivateSubnet
#   - ApplicationServerSecurityGroup
##################

  ApplicationServer:
    Type: AWS::EC2::Instance
    InstanceType: t2.micro
    ImageId: !Ref LatestAL2023AmiId
    SubnetId: !!Ref PrivateSubnet
    SecurityGroupIds: 
     - !Ref ApplicationServerSecurityGroup
    KeyName: !Ref ApplicationServerKeyPair
    Tags:
        - Key: Name
          Value: ApplicationServer
    BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 10
            VolumeType: gp3
            DeleteOnTermination: true
            Encrypted: true
        - DeviceName: /dev/xvdb
          NoDevice: {}
    Monitoring: false



Outputs:
    OnPremiseVpcId: 
      Value: !GetAtt OnPremiseVPC.VpcId
      Description: On-Premise VPC ID

    LinuxBastionHostKeyPairID:
      Value: !GetAtt LinuxBastionHostKeyPair.KeyPairId
      Description: Key Pair ID for Linux Bastion Host 

    ApplicationServerKeyPairID:
      Value: !GetAtt ApplicationServerKeyPair.KeyPairId
      Description: Key Pair ID for Web Server 

    LinuxBastionHostPublicIPAddress:
      Value: !GetAtt LinuxBastionHost.PublicIp
      Description: Public IP Address for Linux Bastion Host

    ApplicationServerPrivateIPAddress:
      Value: !GetAtt ApplicationServer.PrivateIp
      Description: Private IP Address for Application Server

    PublicSubnetNetworkAddress:
      Value: !GetAtt PublicSubnet.CidrBlock
      Description: Public Subnet Network Address

    PublicSubnetAvailabilityZone:
      Value: !GetAtt PublicSubnet.AvailabilityZone
      Description: Public Subnet Availability Zone

    PublicSubnetAvailabilityZoneID:
      Value: !GetAtt PublicSubnet.AvailabilityZoneId
      Description: Public Subnet Availability Zone ID

    PublicSubnetID:
      Value: !GetAtt PublicSubnet.SubnetId
      Description: Public Subnet ID

    PrivateSubnetNetworkAddress:
      Value: !GetAtt PrivateSubnet.CidrBlock
      Description: Private Subnet Network Address

    PrivateSubnetAvailabilityZone:
      Value: !GetAtt PrivateSubnet.AvailabilityZone
      Description: Private Subnet Availability Zone

    PrivateSubnetAvailabilityZoneID:
      Value: !GetAtt PrivateSubnet.AvailabilityZoneId
      Description: Private Subnet Availability Zone ID

    PrivateSubnetID:
      Value: !GetAtt PrivateSubnet.SubnetId
      Description: Private Subnet ID

# Create AMI
#https://repost.aws/knowledge-center/ec2-systems-manager-ami-automation
